--- a/ios-sdk/3.0.5.md
+++ b/ios-sdk/3.0.5.md
@@ -18,7 +18,7 @@ parent: iOS SDK
 
 ### What's New in ExpoFP Fplan version 3.0.5<a id='3.0.5-what-is-new'></a>
 
-Navigation from CrowdConnected and IndoorAtlas has been added.
+ExpoFP-GPS location provider has been added.
 
 ### Installation<a id='3.0.5-installation'></a>
 
