--- a/android-sdk/3.0.6.md
+++ b/android-sdk/3.0.6.md
@@ -19,7 +19,7 @@ nav_order: 3
 
 ### What's New in ExpoFP Fplan version 3.0.6<a id='3.0.6-what-is-new'></a>
 
-In this version of the SDK, navigation from IndoorAtlas was added, and bugs were fixed.
+Dependencies have been updated in this version of the SDK, and the process of caching files has also been optimized.
 
 ### Setup<a id='3.0.6-setup'></a>
 
