--- a/ios-sdk/3.1.1.md
+++ b/ios-sdk/3.1.1.md
@@ -8,17 +8,23 @@ parent: iOS SDK
 ## Table of Contents
 * [What's New](#3.1.1-what-is-new)
 * [Installation](#3.1.1-installation)
-* [Usage](#3.1.1-usage)
-* [Functions](#3.1.1-functions)
-* [Events](#3.1.1-events)
-* [Navigation](#3.1.1-navigation)
+* [UIKit](#3.1.1-uikit)
+    * [Usage](#3.1.1-uikit-usage)
+    * [Functions](#3.1.1-uikit-functions)
+    * [Events](#3.1.1-uikit-events)
+    * [Navigation](#3.1.1-uikit-navigation)
+* [SwiftUI](#3.1.1-swiftui)
+    * [Usage](#3.1.1-swiftui-usage)
+    * [Functions](#3.1.1-swiftui-functions)
+    * [Events](#3.1.1-swiftui-events)
+    * [Navigation](#3.1.1-swiftui-navigation)
 * [CrowdConnected location provider](#3.1.1-cc-navigation)
 * [IndoorAtlas location provider](#3.1.1-ia-navigation)
 * [ExpoFP-GPS location provider](#3.1.1-efp-navigation)
 
 ## What's New in ExpoFP Fplan version 3.1.1<a id='3.1.1-what-is-new'></a>
 
-Improved performance and fixed bugs.
+!!!!!!!!!!!!!!
 
 ## Installation<a id='3.1.1-installation'></a>
 
@@ -27,9 +33,133 @@ Cocoapods:
 ```swift
 pod 'ExpoFpFplan', '3.1.1'
 ```
+
 ## UIKit<a id='3.1.1-uikit'></a>
 
+### Usage<a id='3.1.1-uikit-usage'></a>
 
+```swift
+import UIKit
+import ExpoFpFplan
+
+class ViewController: UIViewController {
+    var fplanUiView: UIFplanView!
+
+    override func loadView() {
+        fplanUiView = UIFplanView()
+        self.view = fplanUiView
+    }
+    
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        fplanUiView.load("https://demo.expofp.com")
+    }
+
+    override func viewWillDisappear(_ animated: Bool) {
+        fplanUiView.destoy()
+    }
+}
+```
+Stop UIFplanView.  
+After you finish working with UIFplanView, you need to stop it.  
+To do this, you need to call the 'destroy' function:  
+
+```swift
+fplanUiView.destoy()
+```
+
+### Functions<a id='3.1.1-uikit-functions'></a>
+
+Open plan:
+
+```swift
+fplanUiView.load("https://demo.expofp.com")
+```
+
+Stop UIFplanView:
+
+```swift
+fplanUiView.destoy()
+```
+
+Select booth:
+
+```swift
+fplanUiView.selectBooth("720")
+```
+
+Build route:
+
+```swift
+fplanUiView.selectRoute(Route(from: "720", to: "751", exceptInaccessible: false))
+```
+
+Set current position(Blue-dot):
+
+```swift
+fplanUiView.setCurrentPosition(BlueDotPoint(x: 22270, y: 44900), true)
+```
+
+Clear floor plan:
+
+```swift
+fplanUiView.clear()
+```
+
+### Events<a id='3.1.1-uikit-events'></a>
+
+Floor plan ready event:
+
+```swift
+fplanUiView.setOnFpReadyCallback {
+    print("Fplan is ready.")            
+}
+```
+
+Select booth event:
+
+```swift
+fplanUiView.setOnBoothClickCallback { boothName in
+    print(boothName)
+}
+```
+
+Route create event:
+
+```swift
+fplanUiView.setOnBuildDirectionCallback { direction in
+    print(direction)
+}
+```
+
+### Navigation<a id='3.1.1-uikit-navigation'></a>
+
+There are 2 ways to use navigation in UIFplanView. The first way is to explicitly specify the provider. In this case, UIFplanView will start and stop the LocationProvider on its own.
+
+```swift
+let locationProvider: LocationProvider = ...
+fplanUiView.load(URL, noOverlay: false, locationProvider: locationProvider)
+```
+
+The second way is to run the GlobalLocationProvider when the program starts:
+
+```swift
+let locationProvider: LocationProvider = ...
+GlobalLocationProvider.initialize(locationProvider)
+GlobalLocationProvider.start()
+```
+
+Using the GlobalLocationProvider in the UIFplanView:
+
+```swift
+fplanUiView.load(URL, noOverlay: false, useGlobalLocationProvider: true)
+```
+
+When the program terminates, the GlobalLocationProvider must also be stopped:
+
+```swift
+GlobalLocationProvider.stop();
+```
 
 ## SwiftUI<a id='3.1.1-swiftui'></a>
 
@@ -198,7 +328,7 @@ There are 2 ways to use navigation in FplanView. The first way is to explicitly 
 
 ```swift
 let locationProvider: LocationProvider = ...
-fplanView.load(state.url, noOverlay: false, locationProvider: locationProvider)
+fplanView.load(URL, noOverlay: false, locationProvider: locationProvider)
 ```
 
 The second way is to run the GlobalLocationProvider when the program starts:
@@ -212,7 +342,7 @@ GlobalLocationProvider.start()
 Using the GlobalLocationProvider in the FplanView:
 
 ```swift
-fplanView.load(state.url, noOverlay: false, useGlobalLocationProvider: true)
+fplanView.load(URL, noOverlay: false, useGlobalLocationProvider: true)
 ```
 
 When the program terminates, the GlobalLocationProvider must also be stopped:
