--- a/ios-sdk/4.0.2.md
+++ b/ios-sdk/4.0.2.md
@@ -1,42 +1,42 @@
 ---
-title: 3.1.1
+title: 4.0.2
 nav_order: 109
 parent: iOS SDK
 ---
-## 3.1.1 version<a id='3.1.1'></a>
+## 4.0.2 version<a id='4.0.2'></a>
 
 ## Table of Contents
-* [What's New](#3.1.1-what-is-new)
-* [Installation](#3.1.1-installation)
-* [UIKit](#3.1.1-uikit)
-    * [Usage](#3.1.1-uikit-usage)
-    * [Functions](#3.1.1-uikit-functions)
-    * [Events](#3.1.1-uikit-events)
-    * [Navigation](#3.1.1-uikit-navigation)
-* [SwiftUI](#3.1.1-swiftui)
-    * [Usage](#3.1.1-swiftui-usage)
-    * [Functions](#3.1.1-swiftui-functions)
-    * [Events](#3.1.1-swiftui-events)
-    * [Navigation](#3.1.1-swiftui-navigation)
-* [CrowdConnected location provider](#3.1.1-cc-navigation)
-* [IndoorAtlas location provider](#3.1.1-ia-navigation)
-* [ExpoFP-GPS location provider](#3.1.1-efp-navigation)
+* [What's New](#4.0.2-what-is-new)
+* [Installation](#4.0.2-installation)
+* [UIKit](#4.0.2-uikit)
+    * [Usage](#4.0.2-uikit-usage)
+    * [Functions](#4.0.2-uikit-functions)
+    * [Events](#4.0.2-uikit-events)
+    * [Navigation](#4.0.2-uikit-navigation)
+* [SwiftUI](#4.0.2-swiftui)
+    * [Usage](#4.0.2-swiftui-usage)
+    * [Functions](#4.0.2-swiftui-functions)
+    * [Events](#4.0.2-swiftui-events)
+    * [Navigation](#4.0.2-swiftui-navigation)
+* [CrowdConnected location provider](#4.0.2-cc-navigation)
+* [IndoorAtlas location provider](#4.0.2-ia-navigation)
+* [ExpoFP-GPS location provider](#4.0.2-efp-navigation)
 
-## What's New in ExpoFP Fplan version 3.1.1<a id='3.1.1-what-is-new'></a>
+## What's New in ExpoFP Fplan version 4.0.2<a id='4.0.2-what-is-new'></a>
 
-!!!!!!!!!!!!!!
+To use the UIKit framework, the UIFplanView component was made. For SwiftUI it is better to use FplanView. The 'onDetails' and 'onExhibitorCustomButtonClick' events have been added.
 
-## Installation<a id='3.1.1-installation'></a>
+## Installation<a id='4.0.2-installation'></a>
 
 Cocoapods:
 
 ```swift
-pod 'ExpoFpFplan', '3.1.1'
+pod 'ExpoFpFplan', '4.0.2'
 ```
 
-## UIKit<a id='3.1.1-uikit'></a>
+## UIKit<a id='4.0.2-uikit'></a>
 
-### Usage<a id='3.1.1-uikit-usage'></a>
+### Usage<a id='4.0.2-uikit-usage'></a>
 
 ```swift
 import UIKit
@@ -68,7 +68,7 @@ To do this, you need to call the 'destroy' function:
 fplanUiView.destoy()
 ```
 
-### Functions<a id='3.1.1-uikit-functions'></a>
+### Functions<a id='4.0.2-uikit-functions'></a>
 
 Open plan:
 
@@ -106,7 +106,7 @@ Clear floor plan:
 fplanUiView.clear()
 ```
 
-### Events<a id='3.1.1-uikit-events'></a>
+### Events<a id='4.0.2-uikit-events'></a>
 
 Floor plan ready event:
 
@@ -132,7 +132,7 @@ fplanUiView.setOnBuildDirectionCallback { direction in
 }
 ```
 
-### Navigation<a id='3.1.1-uikit-navigation'></a>
+### Navigation<a id='4.0.2-uikit-navigation'></a>
 
 There are 2 ways to use navigation in UIFplanView. The first way is to explicitly specify the provider. In this case, UIFplanView will start and stop the LocationProvider on its own.
 
@@ -161,9 +161,9 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-## SwiftUI<a id='3.1.1-swiftui'></a>
+## SwiftUI<a id='4.0.2-swiftui'></a>
 
-### Usage<a id='3.1.1-swiftui-usage'></a>
+### Usage<a id='4.0.2-swiftui-usage'></a>
 
 ```swift
 import SwiftUI
@@ -196,7 +196,7 @@ To do this, you need to call the 'destroy' function:
 fplanView.destoy()
 ```
 
-### Functions<a id='3.1.1-swiftui-functions'></a>
+### Functions<a id='4.0.2-swiftui-functions'></a>
 
 Open plan:
 
@@ -233,7 +233,7 @@ Clear floor plan:
 ```swift
 fplanView.clear()
 ```
-### Events<a id='3.1.1-swiftui-events'></a>
+### Events<a id='4.0.2-swiftui-events'></a>
 
 Floor plan ready event:
 
@@ -322,7 +322,7 @@ struct FplanApp: App {
 }
 ```
 
-### Navigation<a id='3.1.1-swiftui-navigation'></a>
+### Navigation<a id='4.0.2-swiftui-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider. In this case, FplanView will start and stop the LocationProvider on its own.
 
@@ -351,12 +351,12 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-## CrowdConnected location provider<a id='3.1.1-cc-navigation'></a>
+## CrowdConnected location provider<a id='4.0.2-cc-navigation'></a>
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpCrowdConnected', '3.1.1'
+pod 'ExpoFpCrowdConnected', '4.0.2'
 ```
 
 Import:
@@ -380,12 +380,12 @@ settings.addAlias("KEY_2", "VALUE_2")
 let locationProvider: LocationProvider = CrowdConnectedProvider(settings)
 ```
 
-## IndoorAtlas location provider<a id='3.1.1-ia-navigation'></a>
+## IndoorAtlas location provider<a id='4.0.2-ia-navigation'></a>
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpIndoorAtlas', '3.1.1'
+pod 'ExpoFpIndoorAtlas', '4.0.2'
 ```
 
 Import:
@@ -400,12 +400,12 @@ Initialization:
 let locationProvider: LocationProvider = IndoorAtlasProvider(Settings("API_KEY", "API_SECRET_KEY"))
 ```
 
-## ExpoFP-GPS location provider<a id='3.1.1-efp-navigation'></a>
+## ExpoFP-GPS location provider<a id='4.0.2-efp-navigation'></a>
 
 Сocoapods:
 
 ```swift
-pod 'ExpoFpGpsProvider', '3.1.1'
+pod 'ExpoFpGpsProvider', '4.0.2'
 ```
 
 Import:
