--- a/android-sdk/4.0.0.md
+++ b/android-sdk/4.0.0.md
@@ -19,7 +19,7 @@ nav_order: 2
 
 ### What's New in ExpoFP Fplan version 4.0.0<a id='4.0.0-what-is-new'></a>
 
-Dependencies have been updated in this version of the SDK, and the process of caching files has also been optimized.
+The 'onDetails' and 'onExhibitorCustomButtonClick' events have been added.
 
 ### Setup<a id='4.0.0-setup'></a>
 
