--- a/ios-sdk/4.0.2.md
+++ b/ios-sdk/4.0.2.md
@@ -88,6 +88,12 @@ Select booth:
 fplanUiView.selectBooth("720")
 ```
 
+Select exhibitor:
+
+```swift
+fplanUiView.selectExhibitor("RPMXPO")
+```
+
 Build route:
 
 ```swift
@@ -112,15 +118,15 @@ Floor plan ready event:
 
 ```swift
 fplanUiView.setOnFpReadyCallback {
-    print("Fplan is ready.")            
+   print("[OnFpReady]")      
 }
 ```
 
 Select booth event:
 
 ```swift
-fplanUiView.setOnBoothClickCallback { boothName in
-    print(boothName)
+fplanUiView.setOnBoothClickCallback { id, name in
+   print("[OnBoothClick] id=\(id); name=\(name)")
 }
 ```
 
@@ -129,6 +135,23 @@ Route create event:
 ```swift
 fplanUiView.setOnBuildDirectionCallback { direction in
     print(direction)
+}
+```
+
+Details open event:
+
+```swift
+fplanUiView.setOnDetailsClickCallback { details in
+   print("[OnDetailsClick]")
+   print(details)
+}
+```
+
+Exhibitor custom button click event:
+
+```swift
+fplanUiView.setOnExhibitorCustomButtonClickCallback { externalId, buttonNumber, buttonUrl in
+   print("[OnExhibitorCustomButtonClick] externalId=\(externalId); buttonNumber=\(buttonNumber); buttonUrl=\(buttonUrl)")
 }
 ```
 
@@ -216,6 +239,12 @@ Select booth:
 fplanView.selectBooth("720")
 ```
 
+Select exhibitor:
+
+```swift
+fplanView.selectExhibitor("RPMXPO")
+```
+
 Build route:
 
 ```swift
@@ -249,10 +278,10 @@ struct FplanApp: App {
         WindowGroup {
             VStack
             {
-                fplanView.onFpReady{
-                    print("[Fplan] - fpReady")
+                fplanView.onFpReady {
+                    print("[OnFpReady]")
                 }
-                .onAppear{
+                .onAppear {
                     fplanView.load("https://demo.expofp.com")
                 }
                 .onDisappear {
@@ -278,10 +307,10 @@ struct FplanApp: App {
         WindowGroup {
             VStack
             {
-                fplanView.onBoothClick{ boothName in
-                    print("[Fplan] - select booth \(boothName)")
+                fplanView.onBoothClick { id, name in
+                    print("[OnBoothClick] id=\(id); name=\(name)")
                 }
-                .onAppear{
+                .onAppear {
                     fplanView.load("https://demo.expofp.com")
                 }
                 .onDisappear {
@@ -310,7 +339,66 @@ struct FplanApp: App {
                 fplanView.onBuildDirection { direction in
                     print(direction)
                 }
-                .onAppear{
+                .onAppear {
+                    fplanView.load("https://demo.expofp.com")
+                }
+                .onDisappear {
+                    fplanView.destoy()
+                }
+            }
+        }
+    }
+}
+```
+
+Details open event:
+
+```swift
+import SwiftUI
+import ExpoFpFplan
+@main
+struct FplanApp: App {
+    
+    var fplanView = FplanView()
+    
+    var body: some Scene {
+        WindowGroup {
+            VStack
+            {
+                fplanView.onDetailsClick { details in
+                     print("[OnDetailsClick]")
+                     print(details)
+                }
+                .onAppear {
+                    fplanView.load("https://demo.expofp.com")
+                }
+                .onDisappear {
+                    fplanView.destoy()
+                }
+            }
+        }
+    }
+}
+```
+
+Exhibitor custom button click event:
+
+```swift
+import SwiftUI
+import ExpoFpFplan
+@main
+struct FplanApp: App {
+    
+    var fplanView = FplanView()
+    
+    var body: some Scene {
+        WindowGroup {
+            VStack
+            {
+                fplanView.onExhibitorCustomButtonClick { externalId, buttonNumber, buttonUrl in
+                    print("[OnExhibitorCustomButtonClick] externalId=\(externalId); buttonNumber=\(buttonNumber); buttonUrl=\(buttonUrl)")
+                }
+                .onAppear {
                     fplanView.load("https://demo.expofp.com")
                 }
                 .onDisappear {
