--- a/android-sdk/4.0.0.md
+++ b/android-sdk/4.0.0.md
@@ -194,6 +194,22 @@ public void onMessageReceived(String message) {
 }
 ```
 
+Details open event:
+
+```java
+@Override
+public void onDetails(Details details) {
+}
+```
+
+Exhibitor custom button click event:
+
+```swift
+@Override
+public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+}
+```
+
 ### Navigation<a id='4.0.0-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider in the FplanView settings. In this case, FplanView will start and stop the LocationProvider on its own.
