--- a/android-sdk/4.0.1.md
+++ b/android-sdk/4.0.1.md
@@ -1,27 +1,27 @@
 ---
 layout: default
-title: 4.0.0
+title: 4.0.1
 parent: Android SDK
 nav_order: 2
 ---
 
-## 4.0.0 version<a id='4.0.0'></a>
+## 4.0.1 version<a id='4.0.1'></a>
 
 ## Table of Contents
-* [What's New](#4.0.0-what-is-new)
-* [Setup](#4.0.0-setup)
-* [Usage](#4.0.0-usage)
-* [Functions](#4.0.0-functions)
-* [Events](#4.0.0-events)
-* [Navigation](#4.0.0-navigation)
-* [CrowdConnected location provider](#4.0.0-cc-navigation)
-* [IndoorAtlas location provider](#4.0.0-ia-navigation)
+* [What's New](#4.0.1-what-is-new)
+* [Setup](#4.0.1-setup)
+* [Usage](#4.0.1-usage)
+* [Functions](#4.0.1-functions)
+* [Events](#4.0.1-events)
+* [Navigation](#4.0.1-navigation)
+* [CrowdConnected location provider](#4.0.1-cc-navigation)
+* [IndoorAtlas location provider](#4.0.1-ia-navigation)
 
-### What's New in ExpoFP Fplan version 4.0.0<a id='4.0.0-what-is-new'></a>
+### What's New in ExpoFP Fplan version 4.0.1<a id='4.0.1-what-is-new'></a>
 
 The 'onDetails' and 'onExhibitorCustomButtonClick' events have been added.
 
-### Setup<a id='4.0.0-setup'></a>
+### Setup<a id='4.0.1-setup'></a>
 
 Add Maven repository reference to settings.gradle file(in root of your project):
 
@@ -42,20 +42,20 @@ Add dependency to build.gradle file(in module):
 
 ```java
 dependencies {
-    implementation 'com.expofp:common:4.0.0'
-    implementation 'com.expofp:fplan:4.0.0'
+    implementation 'com.expofp:common:4.0.1'
+    implementation 'com.expofp:fplan:4.0.1'
     
     //If you want to use navigation from CrowdConnected, add a link to the package
-    //implementation 'com.expofp:crowdconnected:4.0.0'
+    //implementation 'com.expofp:crowdconnected:4.0.1'
     
     //If you want to use navigation from IndoorAtlas, add a link to the package
-    //implementation 'com.expofp:indooratlas:4.0.0'
+    //implementation 'com.expofp:indooratlas:4.0.1'
     
     ... 
 }
 ```
 
-### Usage<a id='4.0.0-usage'></a>
+### Usage<a id='4.0.1-usage'></a>
 
 Add FplanView to layout:
 
@@ -94,25 +94,24 @@ Settings settings = new Settings("https://demo.expofp.com", false)
                     }
 
                     @Override
-                    public void onBoothClick(String s) {
+                    public void onBoothClick(@Nullable String id, @Nullable String name) {
                     }
 
                     @Override
-                    public void onDirection(Route route) {
-                    }
-                    
-                    @Override
-                    public void onMessageReceived(String message) {
+                    public void onDirection(@Nullable Route route) {
                     }
 
                     @Override
-                    public void onDetails(Details details) {
+                    public void onDetails(@Nullable Details details) {
                     }
 
                     @Override
                     public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
                     }
-                    
+
+                    @Override
+                    public void onMessageReceived(@Nullable String message) {
+                    }
                 });
 
 _fplanView = findViewById(R.id.fplanView);
@@ -128,7 +127,7 @@ _fplanView = findViewById(R.id.fplanView);
 _fplanView.destroy();
 ```
 
-### Functions<a id='4.0.0-functions'></a>
+### Functions<a id='4.0.1-functions'></a>
 
 Select booth:
 
@@ -160,7 +159,7 @@ Clear floor plan:
 _fplanView.clear();
 ```
 
-### Events<a id='4.0.0-events'></a>
+### Events<a id='4.0.1-events'></a>
 
 Floor plan ready event:
 
@@ -174,7 +173,7 @@ Select booth event:
 
 ```java
 @Override
-public void onBoothClick(String boothName) {
+public void onBoothClick(@Nullable String id, @Nullable String name) {
 }
 ```
 
@@ -182,7 +181,7 @@ Route create event:
 
 ```java
 @Override
-public void onDirection(Route route) {
+public void onDirection(@Nullable Route route) {
 }
 ```
 
@@ -190,7 +189,7 @@ Receive message event:
 
 ```java
 @Override
-public void onMessageReceived(String message) {
+public void onMessageReceived(@Nullable String message) {
 }
 ```
 
@@ -198,7 +197,7 @@ Details open event:
 
 ```java
 @Override
-public void onDetails(Details details) {
+public void onDetails(@Nullable Details details) {
 }
 ```
 
@@ -210,7 +209,7 @@ public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, St
 }
 ```
 
-### Navigation<a id='4.0.0-navigation'></a>
+### Navigation<a id='4.0.1-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider in the FplanView settings. In this case, FplanView will start and stop the LocationProvider on its own.
 
@@ -249,7 +248,7 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
-### CrowdConnected location provider<a id='4.0.0-cc-navigation'></a>
+### CrowdConnected location provider<a id='4.0.1-cc-navigation'></a>
 
 Setup:
 
@@ -266,7 +265,7 @@ repositories {
 
 ```java
 dependencies {
-    implementation 'com.expofp:crowdconnected:4.0.0'
+    implementation 'com.expofp:crowdconnected:4.0.1'
     implementation 'net.crowdconnected.android.core:android-core:1.3.1'
     implementation 'net.crowdconnected.android.ips:android-ips:1.3.1'
     implementation 'net.crowdconnected.android.geo:android-geo:1.3.1'
@@ -299,7 +298,7 @@ lpSettings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON);
 LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
 
-### IndoorAtlas location provider<a id='4.0.0-ia-navigation'></a>
+### IndoorAtlas location provider<a id='4.0.1-ia-navigation'></a>
 
 Setup:
 
@@ -316,7 +315,7 @@ repositories {
 
 ```java
 dependencies {
-    implementation 'com.expofp:indooratlas:4.0.0'
+    implementation 'com.expofp:indooratlas:4.0.1'
     implementation "com.indooratlas.android:indooratlas-android-sdk:3.5.5@aar"
     
     ... 
