Android SDK 4.0.2 release

--- a/android-sdk/4.0.2.md
+++ b/android-sdk/4.0.2.md
@@ -1,66 +1,27 @@
 ---
 layout: default
-title: 2.2.1
+title: 4.0.2
 parent: Android SDK
-nav_order: 97
+nav_order: 93
 ---
 
-## 2.2.1 version<a id='2.2.1'></a>
+## 4.0.2 version<a id='4.0.2'></a>
 
 ## Table of Contents
-* [What's New](#2.2.1-what-is-new)
-* [Migration from 1.1.10](#2.2.1-migration-1.1.10)
-* [Setup](#2.2.1-setup)
-* [Permissions](#2.2.1-permissions)
-* [Usage](#2.2.1-usage)
-* [Functions](#2.2.1-functions)
-* [Events](#2.2.1-events)
-* [Navigation](#2.2.1-navigation)
-* [CrowdConnected location provider](#2.2.1-cc-navigation)
+* [What's New](#4.0.2-what-is-new)
+* [Setup](#4.0.2-setup)
+* [Usage](#4.0.2-usage)
+* [Functions](#4.0.2-functions)
+* [Events](#4.0.2-events)
+* [Navigation](#4.0.2-navigation)
+* [CrowdConnected location provider](#4.0.2-cc-navigation)
+* [IndoorAtlas location provider](#4.0.2-ia-navigation)
 
-### What's New in ExpoFP Fplan version 2.2.1<a id='2.2.1-what-is-new'></a>
+### What's New in ExpoFP Fplan version 4.0.2<a id='4.0.2-what-is-new'></a>
 
-In the new version of the library, all FplanView settings have been moved to the Settings class. Some function and event names have been changed to match the [JavaScript API Reference](https://developer.expofp.com/reference). Navigation from CrowdConnected has also been added.
+Bugs have been fixed.
 
-### Migration from 1.1.10<a id='2.2.1-migration-1.1.10'></a>
-
-All FplanView settings have been moved to a separate class:
-
-```java
-com.expofp.fplan.Settings settings = new com.expofp.fplan.Settings("https://demo.expofp.com", false, false)
-                //.withLocationProvider(new CrowdConnectedProvider(getApplication(), new com.expofp.crowdconnected.Settings("APP_KEY","TOKEN","SECRET")))
-                //.withGlobalLocationProvider()
-                .withEventsListener(new FplanEventsListener() {
-                    @Override
-                    public void onFpConfigured() { }
-
-                    @Override
-                    public void onBoothClick(String boothName) { }
-
-                    @Override
-                    public void onDirection(Route route) { }
-                });
-                
-fplanView.init(settings);
-```
-
-Some FplanView functions have been renamed:
-
-```java
-buildRoute -> selectRoute
-
-setCurrentPosition -> selectCurrentPosition
-```
-
-Some FplanEventsListener methods have been renamed:
-
-```java
-onBoothSelected -> onBoothClick
-
-onRouteCreated -> onDirection
-```
-
-### Setup<a id='2.2.1-setup'></a>
+### Setup<a id='4.0.2-setup'></a>
 
 Add Maven repository reference to settings.gradle file(in root of your project):
 
@@ -70,6 +31,9 @@ repositories {
     
     //If you want to use navigation from CrowdConnected, add a link to the repository
     //maven { url "https://maven2.crowdconnected.net/" }
+	
+    //If you want to use navigation from IndoorAtlas, add a link to the repository
+    //maven { url "https://dl.cloudsmith.io/public/indooratlas/mvn-public/maven/" }
     ...
 }
 ```
@@ -78,38 +42,20 @@ Add dependency to build.gradle file(in module):
 
 ```java
 dependencies {
-    implementation 'com.expofp:common:2.2.1'
-    implementation 'com.expofp:fplan:2.2.1'
+    implementation 'com.expofp:common:4.0.2'
+    implementation 'com.expofp:fplan:4.0.2'
     
     //If you want to use navigation from CrowdConnected, add a link to the package
-    //implementation 'com.expofp:crowdconnected:2.2.1'
+    //implementation 'com.expofp:crowdconnected:4.0.2'
+    
+    //If you want to use navigation from IndoorAtlas, add a link to the package
+    //implementation 'com.expofp:indooratlas:4.0.2'
+    
     ... 
 }
 ```
 
-### Permissions<a id='2.2.1-permissions'></a>
-
-Now there is no need to specify permissions, now each package contains a manifest file with permissions.
-
-The com.expofp.fplan package contains a manifest file with permissions:
-```xml
-<uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-<uses-permission android:name="android.permission.ACCESS_WIFI_STATE"/>
-<uses-permission android:name="android.permission.INTERNET"/>
-```
-
-The com.expofp.crowdconnected package contains a manifest file with permissions:
-```xml
-<uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
-<uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
-
-<uses-permission android:name="android.permission.BLUETOOTH" />
-<uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
-<uses-permission android:name="android.permission.BLUETOOTH_SCAN" />
-<uses-permission android:name="android.permission.BLUETOOTH_CONNECT" />
-```
-
-### Usage<a id='2.2.1-usage'></a>
+### Usage<a id='4.0.2-usage'></a>
 
 Add FplanView to layout:
 
@@ -140,6 +86,7 @@ Init FplanView:
 //noOverlay - Hides the panel with information about exhibitors
 Settings settings = new Settings("https://demo.expofp.com", false)
                 //.withLocationProvider(new CrowdConnectedProvider(getApplication(), new com.expofp.crowdconnected.Settings("APP_KEY","TOKEN","SECRET")))
+                //.withLocationProvider(new IndoorAtlasProvider(getApplication(), "API_KEY", "API_SECRET_KEY"))
                 //.withGlobalLocationProvider()
                 .withEventsListener(new FplanEventsListener() {
                     @Override
@@ -147,17 +94,24 @@ Settings settings = new Settings("https://demo.expofp.com", false)
                     }
 
                     @Override
-                    public void onBoothClick(String s) {
+                    public void onBoothClick(@Nullable String id, @Nullable String name) {
                     }
 
                     @Override
-                    public void onDirection(Route route) {
+                    public void onDirection(@Nullable Route route) {
                     }
-                    
+
                     @Override
-                    public void onMessageReceived(String message) {
+                    public void onDetails(@Nullable Details details) {
                     }
-                    
+
+                    @Override
+                    public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+                    }
+
+                    @Override
+                    public void onMessageReceived(@Nullable String message) {
+                    }
                 });
 
 _fplanView = findViewById(R.id.fplanView);
@@ -173,7 +127,7 @@ _fplanView = findViewById(R.id.fplanView);
 _fplanView.destroy();
 ```
 
-### Functions<a id='2.2.1-functions'></a>
+### Functions<a id='4.0.2-functions'></a>
 
 Select booth:
 
@@ -205,7 +159,7 @@ Clear floor plan:
 _fplanView.clear();
 ```
 
-### Events<a id='2.2.1-events'></a>
+### Events<a id='4.0.2-events'></a>
 
 Floor plan ready event:
 
@@ -219,7 +173,7 @@ Select booth event:
 
 ```java
 @Override
-public void onBoothClick(String boothName) {
+public void onBoothClick(@Nullable String id, @Nullable String name) {
 }
 ```
 
@@ -227,7 +181,7 @@ Route create event:
 
 ```java
 @Override
-public void onDirection(Route route) {
+public void onDirection(@Nullable Route route) {
 }
 ```
 
@@ -235,17 +189,35 @@ Receive message event:
 
 ```java
 @Override
-public void onMessageReceived(String message) {
+public void onMessageReceived(@Nullable String message) {
 }
 ```
 
-### Navigation<a id='2.2.1-navigation'></a>
+Details open event:
+
+```java
+@Override
+public void onDetails(@Nullable Details details) {
+}
+```
+
+Exhibitor custom button click event:
+
+```swift
+@Override
+public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+}
+```
+
+### Navigation<a id='4.0.2-navigation'></a>
 
 There are 2 ways to use navigation in FplanView. The first way is to explicitly specify the provider in the FplanView settings. In this case, FplanView will start and stop the LocationProvider on its own.
 
 ```java
+LocationProvider locationProvider = ...;
+
 Settings settings = new Settings("https://demo.expofp.com", false)
-                .withLocationProvider(SOME_LOCATION_PROVIDER);
+                .withLocationProvider(locationProvider);
 
 _fplanView = findViewById(R.id.fplanView);
 _fplanView.init(settings);
@@ -254,7 +226,9 @@ _fplanView.init(settings);
 The second way is to run the GlobalLocationProvider when the program starts:
 
 ```java
-GlobalLocationProvider.init(SOME_LOCATION_PROVIDER);
+LocationProvider locationProvider = ...;
+
+GlobalLocationProvider.init(locationProvider);
 GlobalLocationProvider.start();
 ```
 
@@ -274,14 +248,37 @@ When the program terminates, the GlobalLocationProvider must also be stopped:
 GlobalLocationProvider.stop();
 ```
 
+### CrowdConnected location provider<a id='4.0.2-cc-navigation'></a>
 
-### CrowdConnected location provider<a id='2.2.1-cc-navigation'></a>
+Setup:
+
+1. Add Maven repository reference to settings.gradle file(in root of your project):
+
+```java
+repositories {
+    maven { url "https://maven2.crowdconnected.net/" }
+    ...
+}
+```
+
+2. Add dependency to build.gradle file(in module):
+
+```java
+dependencies {
+    implementation 'com.expofp:crowdconnected:4.0.2'
+    implementation 'net.crowdconnected.android.core:android-core:1.3.1'
+    implementation 'net.crowdconnected.android.ips:android-ips:1.3.1'
+    implementation 'net.crowdconnected.android.geo:android-geo:1.3.1'
+    
+    ... 
+}
+```
 
 LocationProvider initialization:
 
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
-LocationProvider locationProvider = new CrowdConnectedProvider(getApplication(), lpSettings);
+LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
 
 Aliases:
@@ -290,7 +287,7 @@ Aliases:
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
 lpSettings.setAlias("KEY_1", "VALUE_1");
 lpSettings.setAlias("KEY_2", "VALUE_2");
-LocationProvider locationProvider = new CrowdConnectedProvider(getApplication(), lpSettings);
+LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
 
 Notification settings:
@@ -298,5 +295,36 @@ Notification settings:
 ```java
 com.expofp.crowdconnected.Settings lpSettings = new com.expofp.crowdconnected.Settings("APP_KEY", "TOKEN", "SECRET", Mode.IPS_ONLY);
 lpSettings.setServiceNotificationInfo("NOTIFICATION_TEXT", SERVICE_ICON);
-LocationProvider locationProvider = new CrowdConnectedProvider(getApplication(), lpSettings);
+LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnectedProvider(getApplication(), lpSettings);
 ```
+
+### IndoorAtlas location provider<a id='4.0.2-ia-navigation'></a>
+
+Setup:
+
+1. Add Maven repository reference to settings.gradle file(in root of your project):
+
+```java
+repositories {
+    maven { url "https://dl.cloudsmith.io/public/indooratlas/mvn-public/maven/" }
+    ...
+}
+```
+
+2. Add dependency to build.gradle file(in module):
+
+```java
+dependencies {
+    implementation 'com.expofp:indooratlas:4.0.2'
+    implementation "com.indooratlas.android:indooratlas-android-sdk:3.5.5@aar"
+    
+    ... 
+}
+```
+
+LocationProvider initialization:
+
+```java
+LocationProvider locationProvider = new com.expofp.indooratlas.IndoorAtlasProvider(getApplication(), "API_KEY", "API_SECRET_KEY");
+```
+
