--- a/android-sdk/4.0.5.md
+++ b/android-sdk/4.0.5.md
@@ -23,7 +23,7 @@ Bugs have been fixed.
 
 ### Setup<a id='4.0.5-setup'></a>
 
-1. Add Maven repository reference to settings.gradle file(in root of your project):
+Add Maven repository reference to settings.gradle file(in root of your project):
 
 ```java
 repositories {
@@ -38,7 +38,7 @@ repositories {
 }
 ```
 
-2. Add dependency to build.gradle file(in module):
+Add dependency to build.gradle file(in module):
 
 ```java
 dependencies {
@@ -55,7 +55,7 @@ dependencies {
 }
 ```
 
-3. Add permissions in "AndroidManifest.xml" file:
+Add permissions in "AndroidManifest.xml" file:
 
 ```xml
     <uses-permission android:name="android.permission.INTERNET" />
