--- a/android-sdk/4.0.5.md
+++ b/android-sdk/4.0.5.md
@@ -259,7 +259,7 @@ GlobalLocationProvider.stop();
 
 Setup:
 
-1. Add Maven repository reference to settings.gradle file(in root of your project):
+Add Maven repository reference to settings.gradle file(in root of your project):
 
 ```java
 repositories {
@@ -268,7 +268,7 @@ repositories {
 }
 ```
 
-2. Add dependency to build.gradle file(in module):
+Add dependency to build.gradle file(in module):
 
 ```java
 dependencies {
@@ -281,7 +281,7 @@ dependencies {
 }
 ```
 
-3. Add permissions in "AndroidManifest.xml" file:
+Add permissions in "AndroidManifest.xml" file:
 
 ```xml
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
@@ -321,7 +321,7 @@ LocationProvider locationProvider = new com.expofp.crowdconnected.CrowdConnected
 
 Setup:
 
-1. Add Maven repository reference to settings.gradle file(in root of your project):
+Add Maven repository reference to settings.gradle file(in root of your project):
 
 ```java
 repositories {
@@ -330,7 +330,7 @@ repositories {
 }
 ```
 
-2. Add dependency to build.gradle file(in module):
+Add dependency to build.gradle file(in module):
 
 ```java
 dependencies {
@@ -341,7 +341,7 @@ dependencies {
 }
 ```
 
-3. Add permissions in "AndroidManifest.xml" file:
+Add permissions in "AndroidManifest.xml" file:
 
 ```xml
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
