ExpoFP iOS SDK 4.0.7

--- a/ios-sdk/4.0.7.md
+++ b/ios-sdk/4.0.7.md
@@ -24,7 +24,7 @@ parent: iOS SDK
 
 ## What's New in ExpoFP Fplan version 4.0.7<a id='4.0.7-what-is-new'></a>
 
-To use the UIKit framework, the UIFplanView component was made. For SwiftUI it is better to use FplanView. The 'onDetails' and 'onExhibitorCustomButtonClick' events have been added.
+Bugs have been fixed.
 
 ## Installation<a id='4.0.7-installation'></a>
 
@@ -505,7 +505,7 @@ Permissions(in Info.plist file):
 ```xml
 <key>UIBackgroundModes</key>
 <array>
-	<string>location</string>
+    <string>location</string>
 </array>
 
 <key>NSLocationAlwaysUsageDescription</key>
@@ -549,7 +549,7 @@ Permissions(in Info.plist file):
 ```xml
 <key>UIBackgroundModes</key>
 <array>
-	<string>location</string>
+    <string>location</string>
 </array>
 
 <key>NSLocationAlwaysUsageDescription</key>
