--- a/android-sdk/4.1.2.md
+++ b/android-sdk/4.1.2.md
@@ -11,6 +11,7 @@ nav_order: 91
 * [What's New](#4.1.2-what-is-new)
 * [Setup](#4.1.2-setup)
 * [Usage](#4.1.2-usage)
+* [Offline mode](#4.1.2-offline)
 * [Functions](#4.1.2-functions)
 * [Events](#4.1.2-events)
 * [Navigation](#4.1.2-navigation)
@@ -138,6 +139,95 @@ To do this, you need to call the 'destroy' function:
 ```java
 _fplanView = findViewById(R.id.fplanView);
 _fplanView.destroy();
+```
+
+### Offline mode<a id='4.1.2-offline'></a>
+
+SDK provides the following offline modes:
+
+1. Default - ExpoFP SDK itself caches all the necessary data during the initial loading of the plan.
+
+2. Opening a zip archive with a plan - you can download the plan archive from the "Integration options" page (windows section), 
+add this archive to your application (assets) and then open this plan using the "openZipFromAssets()" function. 
+
+Example:
+
+```java
+Settings settings = new Settings("")
+                .withEventsListener(new FplanEventsListener() {
+                    @Override
+                    public void onFpConfigured() {
+                    }
+
+                    @Nullable
+                    @Override
+                    public void onFpConfigureError(int errorCode, String description) {
+                    }
+
+                    @Override
+                    public void onBoothClick(@Nullable String id, @Nullable String name) {
+                    }
+
+                    @Override
+                    public void onDirection(@Nullable Route route) {
+                    }
+
+                    @Override
+                    public void onDetails(@Nullable Details details) {
+                    }
+
+                    @Override
+                    public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+                    }
+
+                    @Override
+                    public void onMessageReceived(@Nullable String message) {
+                    }
+                });
+
+_fplanView = findViewById(R.id.fplanView);
+_fplanView.openZipFromAssets("demo.zip", null, settings, getApplicationContext());
+```
+
+You can also open a zip using the "openZip()" function, this allows you to open an archive stored in the device's memory.
+
+Example:
+
+```java
+Settings settings = new Settings("")
+                .withEventsListener(new FplanEventsListener() {
+                    @Override
+                    public void onFpConfigured() {
+                    }
+
+                    @Nullable
+                    @Override
+                    public void onFpConfigureError(int errorCode, String description) {
+                    }
+
+                    @Override
+                    public void onBoothClick(@Nullable String id, @Nullable String name) {
+                    }
+
+                    @Override
+                    public void onDirection(@Nullable Route route) {
+                    }
+
+                    @Override
+                    public void onDetails(@Nullable Details details) {
+                    }
+
+                    @Override
+                    public void onExhibitorCustomButtonClick(String externalId, int buttonNumber, String buttonUrl) {
+                    }
+
+                    @Override
+                    public void onMessageReceived(@Nullable String message) {
+                    }
+                });
+
+_fplanView = findViewById(R.id.fplanView);
+_fplanView.openZip("/mnt/sdcard/demo.zip", null, settings, getApplicationContext());
 ```
 
 ### Functions<a id='4.1.2-functions'></a>
