--- a/android-sdk/4.1.2.md
+++ b/android-sdk/4.1.2.md
@@ -143,7 +143,7 @@ _fplanView.destroy();
 
 ### Offline mode<a id='4.1.2-offline'></a>
 
-SDK provides the following offline modes:
+ExpoFP SDK provides the following offline modes:
 
 1. Default - ExpoFP SDK itself caches all the necessary data during the initial loading of the plan.
 
