--- a/ios-sdk/4.1.1.md
+++ b/ios-sdk/4.1.1.md
@@ -77,7 +77,7 @@ ExpoFP SDK provides the following offline modes:
 1. Default - ExpoFP SDK itself caches all the necessary data during the initial loading of the plan.
 
 2. Opening a zip archive with a plan - you can download the plan archive from the "Integration options" page (windows section), 
-add this archive to your application (assets) and then open this plan using the "openZip()" function. 
+add this archive to your application (Resources.bundle) and then open this plan using the "openZip()" function. 
 
 Example:
 
@@ -264,7 +264,7 @@ ExpoFP SDK provides the following offline modes:
 1. Default - ExpoFP SDK itself caches all the necessary data during the initial loading of the plan.
 
 2. Opening a zip archive with a plan - you can download the plan archive from the "Integration options" page (windows section), 
-add this archive to your application (assets) and then open this plan using the "openZip()" function. 
+add this archive to your application (Resources.bundle) and then open this plan using the "openZip()" function. 
 
 Example:
 
